# chat-inteligente-simple

./: .gitignore  README.md  chat.py  pyproject.toml
